--- a/index.html
+++ b/index.html
@@ -121,21 +121,21 @@
                <div class="col-md-4">
                   <div class="we_do_box">
                      <i><img src="images/plan1.png" alt="#"/></i>
-                     <h4>House clean</h4>
+                     <h4>Vision</h4>
                      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="we_do_box">
                      <i><img src="images/plan2.png" alt="#"/></i>
-                     <h4>office Clean</h4>
+                     <h4>Mission</h4>
                      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="we_do_box">
                      <i><img src="images/plan3.png" alt="#"/></i>
-                     <h4>Factory clean</h4>
+                     <h4>Objectives</h4>
                      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
                   </div>
                </div>
