--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
                                     <div  class="col-md-8">
                                        <div class="test_box">
                                           <div class="jons">
-                                             <h4>Jonson Donat</h4>
+                                             <h4>What We Offer To The Community</h4>
                                           </div>
-                                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod aliquip ex ea commodo consequat. Duis aute irure dolor in reprehe</p>
+                                          <p>We give food occasionally to the community and  </p>
                                        </div>
                                     </div>
                                  </div>
