--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                <div class="col-md-4">
                   <div class="text-bg">
                      <h1>WE <br>
-                        WILL <br>
-                        bettter<br>
-                        Clean <br>
-                        <span class="black">Services  </span>
+                        A<br>
+                        beacon<br>
+                        of <br>
+                        <span class="black">Hope  </span>
                      </h1>
                      <a href="#contact">Contact Us</a>
                   </div>
