--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
                                     <div  class="col-md-8">
                                        <div class="test_box">
                                           <div class="jons">
-                                             <h4>Jonson Donat</h4>
+                                             <h4>insurt wording</h4>
                                           </div>
-                                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod aliquip ex ea commodo consequat. Duis aute irure dolor in reprehe</p>
+                                          <p>insurt wording</p>
                                        </div>
                                     </div>
                                  </div>
@@ -224,9 +224,9 @@
                                     <div  class="col-md-8">
                                        <div class="test_box">
                                           <div class="jons">
-                                             <h4>Jonson Donat</h4>
+                                             <h4>insurt wording</h4>
                                           </div>
-                                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod aliquip ex ea commodo consequat. Duis aute irure dolor in reprehe</p>
+                                          <p>insurt wording</p>
                                        </div>
                                     </div>
                                  </div>
