--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                   <div class="we_do_box">
                      <i><img src="images/plan1.png" alt="#"/></i>
                      <h4>Vision</h4>
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
+                     <p>20 odd years in the business , Vanessa and her wonderful close knit team has dedicated their lives to serving the community of Rocklands and many more by setting up feeding schemes and has hosted events that has aided the community .</p>
                   </div>
                </div>
                <div class="col-md-4">
