--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   <div class="we_do_box">
                      <i><img src="images/plan2.png" alt="#"/></i>
                      <h4>Mission</h4>
-                     <p>Vanessa's and her team has committed themselves to aiding to the community's needs and has an on going feeding scheme every Wednesday , hoping to feed as many mouths as possible . Om average , they would feed 500+ people every Wednesday .</p>
+                     <p>Vanessa and her team has committed themselves to aiding to the community's needs and has an on going feeding scheme every Wednesday , hoping to feed as many mouths as possible . Om average , they would feed 500+ people every Wednesday .</p>
                   </div>
                </div>
                <div class="col-md-4">
