--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Testimonial</h2>
+                     <h2>Vanessa's kitchen in action</h2>
                      <span></span>
                      <strong></strong>
                   </div>
