--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                            
              
                         <span>Thank You For Visiting</span>
-                        <a class="read_more" href="#">Get A Quote</a>
+                        <a class="read_more" href="#">Move To The Top</a>
                      </div>
                   </div>
                </div>
