--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>What we do?</h2>
+                     <h2>We aid the community</h2>
                      <span></span>
                      <strong></strong>
                   </div>
