--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                <div class="col-md-4">
                   <div class="we_do_box">
                      <i><img src="images/plan3.png" alt="#"/></i>
-                     <h4>Objectives</h4>
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
+                     <h4>Challenges</h4>
+                     <p>In these turbulent times , many households across all communities has been rocked by the pandemic as well as continuous social issues .In reality , there are families who often miss meals due to financial issues and that is where Vanessa's kitchen tries their best to feed as many mouths as they can .</p>
                   </div>
                </div>
             </div>
