--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>We aid the community</h2>
+                     <h2>"We serve with love"</h2>
                      <span></span>
                      <strong></strong>
                   </div>
@@ -122,7 +122,7 @@
                   <div class="we_do_box">
                      <i><img src="images/plan1.png" alt="#"/></i>
                      <h4>Vision</h4>
-                     <p>20 odd years in the business , Vanessa and her wonderful close knit team has dedicated their lives to serving the community of Rocklands and many more by setting up feeding schemes and has hosted events that has aided the community .</p>
+                     <p>20 odd years in the business , Vanessa and her close knit team has dedicated their time and lives to serving the community of Rocklands and many more by setting up feeding schemes and has hosted events that has aided the community .</p>
                   </div>
                </div>
                <div class="col-md-4">
@@ -178,9 +178,9 @@
                                     <div  class="col-md-8">
                                        <div class="test_box">
                                           <div class="jons">
-                                             <h4>What We Offer To The Community</h4>
+                                             <h4>The feeding scheme</h4>
                                           </div>
-                                          <p>We give food occasionally to the community and  </p>
+                                          <p>For the past 20 years , Vanessa's Kicthen has never missed A Wednesday and as of recent , Vanessa's kitchen serves food on every other day of the week.</p>
                                        </div>
                                     </div>
                                  </div>
@@ -201,9 +201,9 @@
                                     <div  class="col-md-8">
                                        <div class="test_box">
                                           <div class="jons">
-                                             <h4>insurt wording</h4>
+                                             <h4>Donations</h4>
                                           </div>
-                                          <p>insurt wording</p>
+                                          <p>The organization is very blessed to receive donations from every direction both from other organizations and from members of the community</p>
                                        </div>
                                     </div>
                                  </div>
@@ -224,9 +224,9 @@
                                     <div  class="col-md-8">
                                        <div class="test_box">
                                           <div class="jons">
-                                             <h4>insurt wording</h4>
+                                             <h4>More than just a feeding scheme</h4>
                                           </div>
-                                          <p>insurt wording</p>
+                                          <p>Vanessa has taken it upon herself to avail herself for one on one counselling with members of the community who seeks a safe space to speak openly and freely</p>
                                        </div>
                                     </div>
                                  </div>
