--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Frequently Asked Questions</h2>
+                     <h2>What else do we do?</h2>
                      <span></span>
                      <strong></strong>
                   </div>
@@ -304,7 +304,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="some">
-                     <h3>Where can I get some?</h3>
+                     <h3>We empower the women in our community</h3>
                      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed </p>
                   </div>
                </div>
