--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                <div class="col-md-12">
                   <div class="some">
                      <h3>We empower the women in our community</h3>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed </p>
+                     <p>With an increase of  GBV ( gender-based violence ) in South Africa , Vanessa's Kitchen has taken the issue into their own hands by not directly tackling the issue but by investing their time in empowering the women and children  in the Rocklands community . Vanessa's Kicthen has hosted various  events focussing on empowering and pampering the women and young girls. In the near future , the organization is planning to take a select few of the elderly women in the community for a road trip and stay at the Goudini Spa resort.</p>
                   </div>
                </div>
                <div class="col-md-12">
