--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
                </div>
                <div class="col-md-12">
                   <div class="some">
-                     <h3>How to do clean office</h3>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed </p>
+                     <h3>We became an official NPO in 2016</h3>
+                     <p>Although Vanessa's Kitchen officially registered as an NPO in 2016 , Vanessa herself has been working wuth and for the community for the last 20 years . Vanessa made the decision to help the community in whichever way she can in 1998 and has never looked back since. it was Vanessa's goal to be registered as an NPO and when she acheived it , she went ahead to register another NPO called The helping hands , which furthers the work of Vanessa's Kitchen .</p>
                      <a class=" read_more" href="#">Move To The Top</a>
                   </div>
                </div>
