--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         of <br>
                         <span class="black">Hope  </span>
                      </h1>
-                     <a href="#contact">Contact Us</a>
+                     <a href="#reach out to us">Reach out to us</a>
                   </div>
                </div>
                <div class="col-md-8">
