--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Contact Us</h2>
+                     <h2>Reach out to us</h2>
                      <span></span>
                      <strong></strong>
                   </div>
