--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         of <br>
                         <span class="black">Hope  </span>
                      </h1>
-                     <a href="#reach out to us">Reach out to us</a>
+                     <center><a href="#reachouttous">Reach out to us</a></center>
                   </div>
                </div>
                <div class="col-md-8">
@@ -247,7 +247,7 @@
       </div>
       <!-- end testimonial -->
       <!-- contact -->
-      <div id="contact" class="contact">
+      <div id="reachouttous" class="contact">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
