--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                  <a class="nav-link" href="#we_do">We Serve With Love</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="#contact">Contact</a>
+                                 <a class="nav-link" href="#reachouttous">Contact</a>
                               </li>
                            </ul>
                            
@@ -95,7 +95,7 @@
                </div>
                <div class="col-md-8">
                   <div class="text-img">
-                     <figure><img src="images/clean.png" alt="#"/></figure>
+                     <figure><img src="images/clean.png" style="float:left;max-width:100%;" alt="#"/></figure>
                   </div>
                   <div class="text-img1">
                      
