--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                </div>
                <div class="col-md-8">
                   <div class="text-img">
-                     <figure><img src="images/clean.png" style="float:left;max-width:100%;" alt="#"/></figure>
+                     <figure><img src="images/clean.png" class="banner-img" style="float:left;max-width:100%;" alt="#"/></figure>
                   </div>
                   <div class="text-img1">
                      
