--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item active">
-                                 <a class="nav-link" href="#we_do">We Serve With Love</a>
+                                 <a class="nav-link" href="#we_do">About us</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="#reachouttous">Contact</a>
