--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
-                              <li class="nav-item active">
+                              <li class="nav-item ">
                                  <a class="nav-link" href="#we_do">About us</a>
                               </li>
                               <li class="nav-item">
